# API_Agente_RAG

./: .gitignore  README.md  estructura_proyecto.txt  main.py  pyproject.toml  requirements.txt  run_rag_pipeline.bat  update_embeddings.bat
src/api/: main.py
src/indexer/: embed.py  faiss_indexer.py
src/ingestion/: chunker.py  main_ingest.py  text_extractor.py
src/models/: RequestRAG.py
src/rag/: ask_llm.py  context_builder.py  load_faiss_index.py  main_retrieve.py  retriever.py
src/utils/: Logger.py
