[project]
name = "agente-ip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "google-cloud-aiplatform>=1.100.0",
    "numpy>=2.3.1",
    "openai>=1.92.2",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "sentence-transformers>=4.1.0",
    "transformers>=4.53.0",
    "uvicorn>=0.34.3",
]
